--- a/style.css
+++ b/style.css
@@ -1,18 +1,23 @@
 .logo img {
     float: left;
-    height: 50px;
+    height: 40px;
     width: auto;
 }
 
-.site-header {
-    float: left;
-    margin: 22px 175px 0 ;
+nav {
+    background-color: transparent;
+    height: 65px;
+    margin: 20px 75px 0;
+    justify-content: space-between;
+    align-items: center;
+    backdrop-filter: blur(4px);
     position: relative;
+    display: flex;
 }
 
-.site-header section {
-    height: 72px;
-    margin: 0 auto;
-    position: relative;
-    width: 950px;
+.sign-in {
+    font-size: 25px;
+    font-weight: bold;
+    font-family:'Trebuchet MS';
+    color: gray;
 }
